# nxopentse

./: README.md  pyproject.toml  pyproject_toml_hatch.old  requirements.txt
.github/: FUNDING.yml
.github/workflows/: build_and_publish.yml  build_and_publish_development.yml  documentation.yml
docs/: DocDockerfile  DocsDockerfile
docs/source/: conf.py  index.rst  modules.rst  nxopentse.cad.rst  nxopentse.cae.rst  nxopentse.motion.rst  nxopentse.rst  nxopentse.tools.rst
src/nxopen/: __init__.py
src/nxopen/cad/: code.py
src/nxopen/cae/: preprocessing.py  solving.py
src/nxopen/tools/: general.py
src/nxopentse/: README.md  __init__.py
src/nxopentse/cad/: __init__.py  assemblies.py  code.py
src/nxopentse/cae/: __init__.py  postprocessing.py  preprocessing.py  results_display.py  solving.py  unversal_file.py
src/nxopentse/motion/: __init__.py  code.py  custom_classes.py  mechanism.py
src/nxopentse/tools/: __init__.py  excel.py  general.py  vector_arithmetic.py
