[project]
name = "nxopentse"
version = "0.0.1a"
authors = [
  { name="theScriptingEngineer", email="nxopen@theScriptingEngineer.com" },
]
description = "An NXOpen helper package to reuse code in scripts, in order to avoid having all the underlying code in the journals itself."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/theScriptingEngineer/nxopen"
Issues = "https://github.com/theScriptingEngineer/nxopen/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
