# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[project]
name = "nxopentse"
version = "0.0.1a18"
authors = [
  { name="theScriptingEngineer", email="nxopen@theScriptingEngineer.com" },
]
maintainers = [
  { name="theScriptingEngineer", email="nxopen@theScriptingEngineer.com" },
]
description = "An NXOpen helper package to reuse code in scripts, in order to avoid having all the underlying code in the journals itself."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

[project.urls]
Documentation = "https://nxopentsedocumentation.theScriptingEngineer.com"
Repository = "https://github.com/theScriptingEngineer/nxopentse"
Issues = "https://github.com/theScriptingEngineer/nxopentse/issues"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
